Bug 42164 - VIEWING: Copy/Paste "crawling ants" remain on border to frozen/splitted area after cell is deactivated
Summary: VIEWING: Copy/Paste "crawling ants" remain on border to frozen/splitted area ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
: 35300 68060 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-24 07:51 UTC by Steve Dowe
Modified: 2015-03-08 14:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot shows where the active cell effect remains after cell is deactivated. (24.18 KB, image/png)
2011-10-24 07:51 UTC, Steve Dowe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Dowe 2011-10-24 07:51:53 UTC
Created attachment 52698 [details]
Screenshot shows where the active cell effect remains after cell is deactivated.

In Calc, with a sheet that has a frozen pane at the top/side, and you select a cell to copy/paste its content, the "crawling ants" (flashing dashed lines) that indicate an active cell remain flashing in the border area after you have deactivated the cell.  Note, this cell must be bordering a frozen area.

Here's how to recreate:

1) Open a new sheet, with no custom styles - a new sheet should now be open.

2) Click in cell, for example B3 - the cell should be highlighted with a thick border.

3) Click on menu Window > Freeze - a vertical and a horizontal line should appear in the sheet, and they should converge at the top-left corner of cell B3.

4) Enter some text in the cell then hit CRTL-C to copy that cell - The "crawling ants" should be walking around cell B3, indicating it is active.

5) Paste that content in another cell.  

6) After doing this, hit ESC to deactivate cell B3 - some ants are still crawling round that cell, persistent little blighters! :)
Comment 1 Rainer Bielefeld Retired 2011-10-24 22:24:51 UTC
[Reproducible] with "LibreOffice 3.4.3  - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:302)]" 

Still visible with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  d3d1481-3f8994a-2ba0a9f)]" (110909).

"Crawling ants" remain on border to frozen or splitted area.

An other unexpected effect that might be related is that "crawling ants" do not disappear after <esc> under particular circumstances. Steps to reproduce:

1. open new CALC document
2. Click E10
3. Menu 'Window -> Split'
4. Click B4
5. <control+c>
   "ants" appear
6. click G12
7. <esc>
   Expected: "ants" around B4 disappear
   Actual: "ants" around B4 do NOT disappear
8. Click C7
9.  <esc>
   now "ants" will disappear as expfcted

Another effect:
11. open new CALC document
12. Click E10
13. Menu 'Window -> Split'
14. Click B4, Type "y", <enter>
15. Click B4, <control+c>
   "ants" appear
16. click G12
17. <Control>+<enter>
    Expected: Paste and clear clipboard, "ants" around B4 disappear
    Actual: Paste and clear clipboard, "ants" around B4 do NOT disappear
18. Redo from 15, but cell C6 in step 16
    now "ants" disappear as expected.

BTW, what is the correct name for that "ants"?


@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 2 Björn Michaelsen 2011-12-23 13:26:38 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 3 crxssi 2013-09-24 16:07:57 UTC
*** Bug 68060 has been marked as a duplicate of this bug. ***
Comment 4 crxssi 2013-09-24 16:11:13 UTC
I reported this for version 4.X in Bug 68060 so it has been broken a long time.  Marked mine as a duplicate.  And over there it was also confirmed by yet another person.

This bug wouldn't be such an annoyance if the user had the ability to turn off this animation or if it at least timed out after X seconds.  ( See Bug 35077 )
Comment 5 tmacalp 2014-03-06 04:25:10 UTC
I've submitted a potential fix to gerrit for code review.  Both escape and ctrl-enter now clear the "CopySourceOverlay" for each pane when using a frozen or split view.
Comment 6 Commit Notification 2014-04-01 01:19:14 UTC
Trent MacAlpine committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1ba280a5dd646654bd86fd3db26a2347484e8cc

fdo#42164 Esc doesn't clear copy source overlay in panes of split/frozen view



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2014-04-24 10:13:21 UTC
*** Bug 35300 has been marked as a duplicate of this bug. ***
Comment 8 Tomaz Vajngerl 2015-03-08 14:17:57 UTC
Looks like this is fixed - reopen if that is not the case.