fdo#42164 Esc doesn't clear copy source overlay in panes of split/frozen view

Change-Id: I480fe9a66773bbc6775c6d20c9cf0e2f7e21c230
Reviewed-on: https://gerrit.libreoffice.org/8472
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>